# revm_integration

./: .gitignore  STATE_DB_FFI.md  readme.md
farm/revm_go_bridge/go_app/: main.go
farm/revm_go_bridge/rust_lib/: Cargo.toml
farm/revm_go_bridge/rust_lib/src/: lib.rs
perf_comparision/: README_SEED_PEER.md  test_seed_peer_connectivity.sh
perf_comparision/native_bsc_node_startup/: bsc_performance_verification.sh  download_genesis.sh  test_fixed.sh  test_with_100_blocks.sh  verify_data_correctness.sh
perf_comparision/native_bsc_node_startup/configs/: performance_config.toml
perf_comparision/revm_bsc_node_startup/: revmffi_bsc_perf_verification.sh  revmffi_bsc_perf_verification_with_seed_peer.sh  verify_data_correctness.sh
perf_comparision/revm_bsc_node_startup/configs/: performance_config.toml
perf_comparision/seed_peer/: run_seed_peer.sh  seed_peer_enode.txt
perf_comparision/seed_peer/seed_peer_data/geth/: nodekey  static-nodes.json
revm_ffi_wrapper/: Cargo.toml  build.rs  revm_ffi.h
revm_ffi_wrapper/examples/: BENCHMARK_RESULTS.md  README.md
revm_ffi_wrapper/examples/benchmark_go_call_ffi/: benchmark  benchmark_go_call_ffi  go.mod  go.sum  main.go
revm_ffi_wrapper/examples/benchmark_pure_goevm/: go.mod  go.sum  main.go
revm_ffi_wrapper/examples/benchmark_pure_revm/: Cargo.toml
revm_ffi_wrapper/examples/benchmark_pure_revm/src/: main.rs
revm_ffi_wrapper/examples/contracts/: BIGA.sol  SimpleERC20WithMint.sol
revm_ffi_wrapper/src/: go_db.rs  lib.rs  statedb_types.rs  types.rs  utils.rs
revm_ffi_wrapper/tests/: refund_gas.rs
(+16 files in other folders)
