[package]
name = "revm-ffi"
version = "1.0.0"
edition = "2021"
authors = ["BSC Core Team"]
license = "GPL-3.0"
repository = "https://github.com/bnb-chain/bsc"
readme = "README.md"
description = "FFI bindings for REVM"

[lib]
name = "revm_ffi"
crate-type = ["cdylib", "staticlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.rustdoc]
all = "warn"

[dependencies]
revm = { version = "24.0.0", features = ["dev"] }
anyhow = "1.0"
hex = "0.4"

[features]
default = []
# Development features that match the local revm version
optional_balance_check = ["revm/optional_balance_check"]
optional_block_gas_limit = ["revm/optional_block_gas_limit"]
optional_no_base_fee = ["revm/optional_no_base_fee"] 